# app-statcast

./: .flake8  README.md  pyproject.toml  requirements.txt  startup.txt
.github/workflows/: master_app-statcast.yml
app-statcast/: pyproject.toml  requirements.txt
app_statcast/: main.py
tests/: test_app_statcast.py
