[tool.poetry]
name = "app-statcast"
version = "0.1.0"
description = ""
authors = ["Isaac Lee <iasacrlee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
azure-cosmos = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
