[tool.poetry]
name = "app-statcast"
version = "0.1.0"
description = ""
authors = ["Isaac Lee <isaacrlee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
pandas = "^1.0.3"
sqlalchemy = "^1.3.16"
pymysql = "^0.9.3"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
