[tool.poetry]
name = "app-statcast"
version = "0.1.0"
description = ""
authors = ["Isaac Lee <isaacrlee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
pandas = "^1.0.3"
pymysql = "^0.9.3"
requests = "^2.23.0"
sqlalchemy = "^1.3.16"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = {extras = ["toml"], version = "^5.1"}
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.0"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
pytest = "^5.2"
pytest-cov = "^2.9.0"

[tool.coverage.paths]
source = ["app_statcast"]

[tool.coverage.run]
branch = true
source = ["app_statcast"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]